<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetalleDatos">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/titleTop"
        android:text="@string/confirmarDatos"
        android:textSize="@dimen/titleSize"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingTop="@dimen/titleText"
        android:paddingLeft="@dimen/left"
        android:textSize="@dimen/textSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingTop="@dimen/paddingText"
        android:paddingLeft="@dimen/left"
        android:text="@string/fechaNacimiento"
        android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/tvFechaNacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/paddingText"
            android:paddingLeft="@dimen/left"
            android:textSize="@dimen/textSize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingTop="@dimen/paddingText"
        android:paddingLeft="@dimen/left"
        android:text="@string/tel"
        android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/paddingText"
            android:paddingLeft="@dimen/left"
            android:textSize="@dimen/textSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingTop="@dimen/paddingText"
        android:paddingLeft="@dimen/left"
        android:text="@string/email"
        android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/paddingText"
            android:paddingLeft="@dimen/left"
            android:textSize="@dimen/textSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingTop="@dimen/paddingText"
        android:paddingLeft="@dimen/left"
        android:text="@string/descr"
        android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/paddingText"
            android:paddingLeft="@dimen/left"
            android:textSize="@dimen/textSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center|bottom"
        android:orientation="vertical"
        android:paddingTop="@dimen/titleTop">

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="160dp"
            android:layout_height="@dimen/button"
            android:text="@string/editarDatos"
            android:theme="@style/BotonSiguiente"
            android:layout_gravity="center_horizontal|center"/>
    </LinearLayout>

</LinearLayout>